--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "bootstrap": "^5.2.3",
     "formik": "^2.2.9",
     "framer-motion": "^10.12.4",
+    "js-cookie": "^3.0.5",
     "react": "^18.2.0",
+    "react-auth-kit": "^2.12.2",
     "react-bootstrap": "^2.7.3",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
