--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "react-bootstrap": "^2.7.3",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.9",
     "yup": "^1.1.1",
     "yup-phone": "^1.3.2"
