--- a/package.json
+++ b/package.json
@@ -9,9 +9,6 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@chakra-ui/react": "^2.5.5",
-    "@emotion/react": "^11.10.6",
-    "@emotion/styled": "^11.10.6",
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-regular-svg-icons": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
@@ -19,7 +16,6 @@
     "axios": "^1.3.6",
     "bootstrap": "^5.2.3",
     "formik": "^2.2.9",
-    "framer-motion": "^10.12.4",
     "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-auth-kit": "^2.12.2",
@@ -27,6 +23,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
     "react-slick": "^0.29.0",
+    "react-toastify": "^9.1.2",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.9",
     "yup": "^1.1.1",
